--- a/work.html
+++ b/work.html
@@ -38,39 +38,39 @@
         <h1>Work</h1>
         <div class="grid">
             <div class="grid__item">
-                <h2>Portfolio...</h2>
+                <h2>Coming Soon...</h2>
                 <p>
-                    This is legit the first thing we've got here.
+                    Stay tuned!
                 </p>
             </div>
             <div class="grid__item">
-                <h2>Portfolio...</h2>
+                <h2>Coming Soon...</h2>
                 <p>
-                    This is legit the first thing we've got here.
+                    Stay tuned!
                 </p>
             </div>
             <div class="grid__item">
-                <h2>Portfolio...</h2>
+                <h2>Coming Soon...</h2>
                 <p>
-                    This is legit the first thing we've got here.
+                    Stay tuned!
                 </p>
             </div>
             <div class="grid__item">
-                <h2>Portfolio...</h2>
+                <h2>Coming Soon...</h2>
                 <p>
-                    This is legit the first thing we've got here.
+                    Stay tuned!
                 </p>
             </div>
             <div class="grid__item">
-                <h2>Portfolio...</h2>
+                <h2>Coming Soon...</h2>
                 <p>
-                    This is legit the first thing we've got here.
+                    Stay tuned!
                 </p>
             </div>
             <div class="grid__item">
-                <h2>Portfolio...</h2>
+                <h2>Coming Soon...</h2>
                 <p>
-                    This is legit the first thing we've got here.
+                    Stay tuned!
                 </p>
             </div>
         </div>
