--- a/contact.html
+++ b/contact.html
@@ -43,18 +43,22 @@
             <li>
                 Email: <a href="mailto:danielkimus@gmail.com"> danielkimus@gmail.com </a>
             </li>
-            <br>
+            <li>
+                <br>
+            </li>
             <li>
                 Telephone: <a aria-label="Call 1-619-802-6936 to get a hold of me" href="tel:+16198026936">+1 619-802-6936</a>
             </li>
-            <p></p>
+            <li>
+                <p></p>
+            </li>
             <li>
                 <a class="email" href="mailto:danielkimus@gmail.com">Email Me!</a>
             </li>
         </ul>
 
     <!-- Contact Form -->
-        <form action="" method="post" class="contact-form">
+        <form method="post" class="contact-form">
             Required*
             <p></p>
             <label class="standard-label" for="contact-email">E-mail*: </label>
@@ -64,7 +68,7 @@
             <input type="tel" id="contact-phone-number" pattern="\d{3}[\-]\d{3}[\-]\d{4}" class="phone">
             <p></p>
             <label class="standard-label" for="contact-messsage">Message*: </label>
-            <textarea name="" id="contact-messsage" maxlength="240" cols="30" rows="10" required class="message"></textarea>
+            <textarea id="contact-messsage" maxlength="240" cols="30" rows="10" required class="message"></textarea>
             <p></p>
             <button>Send Message</button>
             
