Change button in about to download logo image

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                 <br>
             </li>
             <li class="button-align">
-                <a href="" class="button" download target="_blank">Here's a Surprise Button</a>
+                <a href="img/templogo.png" class="button" download target="_blank">Here's a Surprise Button</a>
             </li>
         </ul>
 
