Link github to "Check out some of my code"

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h2>I am a <span class="web">&lt;web&gt;</span> development student from California.</h2>
             </li>
             <li>
-                <a href="">Check out some of my code</a>
+                <a href="https://github.com/dandanmania" target="_blank">Check out some of my code</a>
             </li>
         </ul>
     </div>
