--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin&family=Noto+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.production.css">
+    <link href="https://fonts.googleapis.com/css2?family=Mogra&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <!-- Navigation -->
     <header>
-        <a href="index.html" class="left"><img class="logo" src="img/templogo.png" alt="Daniel's Logo"></a>
+        <a href="index.html" class="left">
+            <img class="logo" src="img/logobar.svg" alt="Daniel's Logo">
+        </a>
         <nav class="nav-links">
             <ul role="menubar">
                 <li role="presentation">
@@ -35,10 +38,9 @@
     </header>
 <!-- Contact Details -->
     <div class="content">
-        <img class="main-image" src="img/daniel_photo.jpg" alt="A photo of Daniel">
         <ul>
             <li>
-                <h1>Find me here:</h1>
+                <h1>Contact me here:</h1>
             </li>
             <li>
                 Email: <a href="mailto:danielkimus@gmail.com"> danielkimus@gmail.com </a>
@@ -81,7 +83,6 @@
         <h2 class="find">Find me on</h2>
         <ul class="socials-links">
             <li><a target="_blank" href="https://github.com/dandanmania"><img class="slogo" src="img/github.svg" alt="github"></a></li>
-            <li><a target="_blank" href="https://twitter.com/"><img class="slogo" src="img/twitter.svg" alt="twitter"></a></li>
             <li><a target="_blank" href="https://www.linkedin.com/in/daniel-sinhoo-kim/"><img class="slogo" src="img/linkedin.svg" alt="linkedin"></a></li>
         </ul>
 
