--- a/work.html
+++ b/work.html
@@ -10,12 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin&family=Noto+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.production.css">
+    <link href="https://fonts.googleapis.com/css2?family=Mogra&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <!-- Navigation -->
     <header>
-        <a href="index.html" class="left"><img class="logo" src="img/templogo.png" alt="Daniel's Logo"></a>
+        <a href="index.html" class="left">
+            <img class="logo" src="img/logobar.svg" alt="Daniel's Logo">
+        </a>
         <nav class="nav-links">
             <ul role="menubar">
                 <li role="presentation">
@@ -38,40 +41,53 @@
         <h1>Work</h1>
         <div class="grid">
             <div class="grid__item">
-                <h2>Coming Soon...</h2>
+                <h2>To Do List App</h2>
                 <p>
-                    Stay tuned!
+                    A to-do list app made using HTML and jQuery.
                 </p>
+                <div class="sample-container">
+                    <img src="./img/todolist-sample.png" alt="">
+                </div>
+                <a href="https://dandanmania.github.io/to-do-list-app/">Find it Here!</a>
             </div>
             <div class="grid__item">
-                <h2>Coming Soon...</h2>
+                <h2>Pokédex App</h2>
                 <p>
-                    Stay tuned!
+                    An app that functions as a Generation 1 Pokédex using jQuery and Bootstrap. Learn more of the first 151 Pokémon.
                 </p>
+                <div class="sample-container">
+                    <img src="./img/pokedex-sample.png" alt="">
+                </div>
+                <a href="https://dandanmania.github.io/pokedex-app/">Find it Here!</a>
             </div>
             <div class="grid__item">
-                <h2>Coming Soon...</h2>
+                <h2>myFlixApp - Anime Movies</h2>
                 <p>
-                    Stay tuned!
+                    An app using a self-made API to display information of a handful of anime movies.
+                    Register and log in to access the movies and their details. Uses React [Redux, Router, Bootstrap].
                 </p>
+                <div class="sample-container">
+                    <img src="./img/myFlix-sample.png">
+                </div>
+                <a href="https://dandan-myflix.netlify.app/">Find it Here!</a>
             </div>
             <div class="grid__item">
-                <h2>Coming Soon...</h2>
+                <h2>Meet App</h2>
                 <p>
-                    Stay tuned!
+                    A serverless, progressive web app made with React using test-driven development. It uses the Google Calendar API to fetch and display upcoming coding events.
                 </p>
+                <p>
+                    Warning: This app is in the middle of Google Verification. Access may be limited.
+                </p>
+                <div class="sample-container">
+                    <img src="./img/meetapp-sample2.png" alt="">
+                </div>
+                <a href="https://dandanmania.github.io/meet/">Find it Here!</a>
             </div>
             <div class="grid__item">
-                <h2>Coming Soon...</h2>
-                <p>
-                    Stay tuned!
-                </p>
-            </div>
-            <div class="grid__item">
-                <h2>Coming Soon...</h2>
-                <p>
-                    Stay tuned!
-                </p>
+                <div class="coming-container">
+                    <img class="coming" src="./img/comingsoon.png">
+                </div>
             </div>
         </div>
 
@@ -87,7 +103,6 @@
         <h2 class="find">Find me on</h2>
         <ul class="socials-links">
             <li><a target="_blank" href="https://github.com/dandanmania"><img class="slogo" src="img/github.svg" alt="github"></a></li>
-            <li><a target="_blank" href="https://twitter.com/"><img class="slogo" src="img/twitter.svg" alt="twitter"></a></li>
             <li><a target="_blank" href="https://www.linkedin.com/in/daniel-sinhoo-kim/"><img class="slogo" src="img/linkedin.svg" alt="linkedin"></a></li>
         </ul>
 
