Update img alt, About and Works Pages, Delete Unneeded Images

--- a/about.html
+++ b/about.html
@@ -50,37 +50,28 @@
                 <h2>My name is Daniel Kim. I graduated with a degree in Human Biology, but found out the field was not for me. At the moment, I am pursuing web development to hopefully enter a bright new career.</h2>
             </li>
         </ul>
-        
-        <!-- Skills Table -->
-        <div class="table-container">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Skills</th>
-                        <th>Level of Expertise</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>HTML</td>
-                        <td>Advanced</td>
-                    </tr>
-                    <tr>
-                        <td>CSS</td>
-                        <td>Intermediate</td>
-                    </tr>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>Intermediate</td>
-                    </tr>
-                    <tr>
-                        <td>Ruby</td>
-                        <td>Beginner</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
     </div>
+
+            <!-- Skills Table -->
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <h2 class="about-title">Tool's I've used</h2>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><img class="html-logo tools-logo" src="./img/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></td>
+                            <td><img class="css-logo tools-logo" src="./img/CSS3_logo_and_wordmark.svg" alt="CSS3 Logo"></td>
+                            <td><img class="js-logo tools-logo" src="./img/Unofficial_JavaScript_logo_2.svg" alt="JavaScript Logo"></td>
+                            <td><img class="react-logo tools-logo" src="./img/React-icon.svg" alt="React Logo"></td>
+                            <td><img class="sql-logo tools-logo" src="./img/sql-database-generic.svg" alt="Sql Logo"></td>
+                            <td><img class="mongoDB-logo tools-logo" src="./img/MongoDB_Logo.svg" alt="MongoDB Logo"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
 <!-- Footer -->
     <footer class="socials">
