--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </header>
 <!-- Content -->
     <div class="content">
-            <img src="img/cloudy.svg" alt="" class="cloudy">
-            <img src="img/cloudy.svg" alt="" class="cloudy_two">
-            <img class="main-image" src="img/DK_logo_proto2.png" alt="A photo of Daniel">
+            <img src="img/cloudy.svg" alt="A cloud" class="cloudy">
+            <img src="img/cloudy.svg" alt="Another cloud" class="cloudy_two">
+            <img class="main-image" alt="Daniel's Large Logo" src="img/DK_logo_proto2.png" alt="A photo of Daniel">
         <ul>
             <li class="greeting-container">
                 <h1 class="greeting">Hello &nbsp;</h1>
@@ -59,7 +59,7 @@
     </div>
 <!-- Footer -->
     <footer class="socials">
-        <img src="img/cloudy.svg" alt="" class="cloudy_three">
+        <img src="img/cloudy.svg" alt="A third cloud" class="cloudy_three">
         <h2 class="find">Find me on</h2>
         <ul class="socials-links">
             <li><a target="_blank" href="https://github.com/dandanmania"><img class="slogo" src="img/github.svg" alt="github"></a></li>
