--- a/work.html
+++ b/work.html
@@ -46,9 +46,12 @@
                     A to-do list app made using HTML and jQuery.
                 </p>
                 <div class="sample-container">
-                    <img src="./img/todolist-sample.png" alt="">
+                    <img src="./img/todolist-sample.png" alt="Sample image of To Do List App">
                 </div>
-                <a href="https://dandanmania.github.io/to-do-list-app/">Find it Here!</a>
+                <div class="button-container">
+                    <a class="button" href="https://dandanmania.github.io/to-do-list-app/" target="_blank">Find it Here!</a>
+                    <a class="button" href="https://github.com/dandanmania/to-do-list-app" target="_blank">GitHub Repo</a>
+                </div>
             </div>
             <div class="grid__item">
                 <h2>Pokédex App</h2>
@@ -56,9 +59,12 @@
                     An app that functions as a Generation 1 Pokédex using jQuery and Bootstrap. Learn more of the first 151 Pokémon.
                 </p>
                 <div class="sample-container">
-                    <img src="./img/pokedex-sample.png" alt="">
+                    <img src="./img/pokedex-sample.png" alt="Sample image of pokedex app">
                 </div>
-                <a href="https://dandanmania.github.io/pokedex-app/">Find it Here!</a>
+                <div class="button-container">
+                    <a class="button" href="https://dandanmania.github.io/pokedex-app/" target="_blank">Find it Here!</a>                    
+                    <a class="button" href="https://github.com/dandanmania/pokedex-app" target="_blank">GitHub Repo</a>
+                </div>
             </div>
             <div class="grid__item">
                 <h2>myFlixApp - Anime Movies</h2>
@@ -67,9 +73,12 @@
                     Register and log in to access the movies and their details. Uses React [Redux, Router, Bootstrap].
                 </p>
                 <div class="sample-container">
-                    <img src="./img/myFlix-sample.png">
+                    <img src="./img/myFlix-sample.png" alt="Sample image of anime movie app">
                 </div>
-                <a href="https://dandan-myflix.netlify.app/">Find it Here!</a>
+                <div class="button-container">
+                    <a class="button" href="https://dandan-myflix.netlify.app/" target="_blank">Find it Here!</a>
+                    <a class="button" href="https://github.com/dandanmania/myFlix-client" target="_blank">GitHub Repo</a>
+                </div>
             </div>
             <div class="grid__item">
                 <h2>Meet App</h2>
@@ -80,13 +89,16 @@
                     Warning: This app is in the middle of Google Verification. Access may be limited.
                 </p>
                 <div class="sample-container">
-                    <img src="./img/meetapp-sample2.png" alt="">
+                    <img src="./img/meetapp-sample2.png" alt="Sample image of meet app">
                 </div>
-                <a href="https://dandanmania.github.io/meet/">Find it Here!</a>
+                <div class="button-container">
+                    <a class="button" href="https://dandanmania.github.io/meet/" target="_blank">Find it Here!</a>
+                    <a class="button" href="https://github.com/dandanmania/meet" target="_blank">GitHub Repo</a>
+                </div>
             </div>
             <div class="grid__item">
                 <div class="coming-container">
-                    <img class="coming" src="./img/comingsoon.png">
+                    <img class="coming" alt="Coming Soon Image" src="./img/comingsoon.png">
                 </div>
             </div>
         </div>
