Fix Skills Container, Update Contact Page, Replace Main Page Link with Image for Larger Screens

--- a/about.html
+++ b/about.html
@@ -53,24 +53,18 @@
     </div>
 
             <!-- Skills Table -->
-            <div class="table-container">
-                <table>
-                    <thead>
-                        <tr>
-                            <h2 class="about-title">Tool's I've used</h2>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><img class="html-logo tools-logo" src="./img/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></td>
-                            <td><img class="css-logo tools-logo" src="./img/CSS3_logo_and_wordmark.svg" alt="CSS3 Logo"></td>
-                            <td><img class="js-logo tools-logo" src="./img/Unofficial_JavaScript_logo_2.svg" alt="JavaScript Logo"></td>
-                            <td><img class="react-logo tools-logo" src="./img/React-icon.svg" alt="React Logo"></td>
-                            <td><img class="sql-logo tools-logo" src="./img/sql-database-generic.svg" alt="Sql Logo"></td>
-                            <td><img class="mongoDB-logo tools-logo" src="./img/MongoDB_Logo.svg" alt="MongoDB Logo"></td>
-                        </tr>
-                    </tbody>
-                </table>
+            <h2 class="about-title">Tool's I've used</h2>
+            <div class="grid">
+                    <div class="skill__item">
+                        <div class="skill__container">
+                            <img class="html-logo tools-logo" src="./img/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo">
+                            <img class="css-logo tools-logo" src="./img/CSS3_logo_and_wordmark.svg" alt="CSS3 Logo">
+                            <img class="js-logo tools-logo" src="./img/Unofficial_JavaScript_logo_2.svg" alt="JavaScript Logo">
+                            <img class="react-logo tools-logo" src="./img/React-icon.svg" alt="React Logo">
+                            <img class="sql-logo tools-logo" src="./img/sql-database-generic.svg" alt="Sql Logo">
+                            <img class="mongoDB-logo tools-logo" src="./img/MongoDB_Logo.svg" alt="MongoDB Logo">
+                        </div>
+                    </div>
             </div>
 
 <!-- Footer -->
@@ -79,8 +73,8 @@
         <img src="img/cloudy.svg" alt="" class="cloudy_two">
         <h2 class="find">Find me on</h2>
         <ul class="socials-links">
-            <li><a target="_blank" href="https://github.com/dandanmania"><img class="slogo" src="img/github.svg" alt="github"></a></li>
             <li><a target="_blank" href="https://www.linkedin.com/in/daniel-sinhoo-kim/"><img class="slogo" src="img/linkedin.svg" alt="linkedin"></a></li>
+            <li><a target="_blank" href="https://github.com/dandanmania"><img class="slogo" src="img/github.svg" alt="github"></a></li>
         </ul>
 
     </footer>
