--- a/contact.html
+++ b/contact.html
@@ -38,18 +38,25 @@
     </header>
 <!-- Contact Details -->
     <div class="content">
-        <ul>
+        <img class="contact-bg" src="./img/contact-bg.png" alt="">
+        <ul class="contact-list">
             <li>
                 <h1>Contact me here:</h1>
             </li>
             <li>
-                Email: <a href="mailto:danielkimus@gmail.com"> danielkimus@gmail.com </a>
+                Email
+                <br />
             </li>
             <li>
-                <br>
+                <a href="mailto:danielkimus@gmail.com"> danielkimus@gmail.com </a>
+                <br />
             </li>
             <li>
-                Telephone: <a aria-label="Call 1-619-802-6936 to get a hold of me" href="tel:+16198026936">+1 619-802-6936</a>
+                Telephone
+                <br />
+            </li>
+            <li>
+                <a aria-label="Call 1-619-802-6936 to get a hold of me" href="tel:+16198026936">+1 619-802-6936</a>
             </li>
             <li>
                 <p></p>
@@ -61,8 +68,8 @@
 
     <!-- Contact Form -->
         <form method="post" class="contact-form">
+            <h2 class="message">Leave a Message</h2>
             Required*
-            <p></p>
             <label class="standard-label" for="contact-email">E-mail*: </label>
             <input type="email" id="contact-email" class="email" required>
             <p></p>
@@ -82,8 +89,8 @@
         <img src="img/cloudy.svg" alt="" class="cloudy_two">
         <h2 class="find">Find me on</h2>
         <ul class="socials-links">
-            <li><a target="_blank" href="https://github.com/dandanmania"><img class="slogo" src="img/github.svg" alt="github"></a></li>
             <li><a target="_blank" href="https://www.linkedin.com/in/daniel-sinhoo-kim/"><img class="slogo" src="img/linkedin.svg" alt="linkedin"></a></li>
+            <li><a target="_blank" href="https://github.com/dandanmania"><img class="slogo" src="img/github.svg" alt="github"></a></li>
         </ul>
 
     </footer>
