--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <img class="main-image" alt="Daniel's Large Logo" src="img/DK_logo_proto2.png" alt="A photo of Daniel">
         <ul>
             <li class="greeting-container">
-                <h1 class="greeting">Hello &nbsp;</h1>
-                <h1 class="greeting">World!</h1>
+                <h1 class="greeting">Hello</h1>
+                <h1 class="greeting">&nbsp;World!</h1>
             </li>
             <li>
                 <h2>My name is Daniel Kim.</h2>
@@ -53,7 +53,8 @@
                 <h2>I am a <span class="web">&lt;web&gt;</span> development student from California.</h2>
             </li>
             <li>
-                <a href="https://github.com/dandanmania" target="_blank">Check out some of my code</a>
+                <a class="checkoutlink" href="https://github.com/dandanmania" target="_blank">Check out some of my code</a>
+                <img class="checkoutimg" src="./img/checkout.png" alt="">
             </li>
         </ul>
     </div>
@@ -62,8 +63,8 @@
         <img src="img/cloudy.svg" alt="A third cloud" class="cloudy_three">
         <h2 class="find">Find me on</h2>
         <ul class="socials-links">
-            <li><a target="_blank" href="https://github.com/dandanmania"><img class="slogo" src="img/github.svg" alt="github"></a></li>
             <li><a target="_blank" href="https://www.linkedin.com/in/daniel-sinhoo-kim/"><img class="slogo" src="img/linkedin.svg" alt="linkedin"></a></li>
+            <li><a target="_blank" href="https://github.com/dandanmania"><img class="slogo" src="img/github.svg" alt="github"></a></li>
         </ul>
 
     </footer>
