--- a/work.html
+++ b/work.html
@@ -86,7 +86,7 @@
                     A serverless, progressive web app made with React using test-driven development. It uses the Google Calendar API to fetch and display upcoming coding events.
                 </p>
                 <p>
-                    Warning: This app is in the middle of Google Verification. Access may be limited.
+                    <span class="warning">Warning: </span>This app is in the middle of Google Verification. Access may be limited.
                 </p>
                 <div class="sample-container">
                     <img src="./img/meetapp-sample2.png" alt="Sample image of meet app">
@@ -114,8 +114,8 @@
         <img src="img/cloudy.svg" alt="" class="cloudy_two">
         <h2 class="find">Find me on</h2>
         <ul class="socials-links">
-            <li><a target="_blank" href="https://github.com/dandanmania"><img class="slogo" src="img/github.svg" alt="github"></a></li>
             <li><a target="_blank" href="https://www.linkedin.com/in/daniel-sinhoo-kim/"><img class="slogo" src="img/linkedin.svg" alt="linkedin"></a></li>
+            <li><a target="_blank" href="https://github.com/dandanmania"><img class="slogo" src="img/github.svg" alt="github"></a></li>
         </ul>
 
     </footer>
