--- a/work.html
+++ b/work.html
@@ -86,7 +86,7 @@
                     A serverless, progressive web app made with React using test-driven development. It uses the Google Calendar API to fetch and display upcoming coding events.
                 </p>
                 <p>
-                    <span class="warning">Warning: </span>This app is in the middle of Google Verification. Access may be limited.
+                    <span class="warning">Warning: </span>This app is in the middle of Google Verification. App should still be accessible past the warning.
                 </p>
                 <div class="sample-container">
                     <img src="./img/meetapp-sample2.png" alt="Sample image of meet app">
