Add myFlix Angular to Works

--- a/work.html
+++ b/work.html
@@ -96,6 +96,17 @@
                     <a class="button" href="https://github.com/dandanmania/meet" target="_blank">GitHub Repo</a>
                 </div>
             </div>
+            <div>
+                <h2>myFlix - Angular</h2>
+                <p>
+                    An app using a self-made API to display information of a handful of anime movies... except this time using Angular!
+                    <img src="./img/myFlixAngularSample.png" alt="Sample image of the Angular myFlix App">
+                    <div class="button-container">
+                        <a class="button" href="https://dandanmania.github.io/myFlix-Angular-client/" target="_blank">Find it Here!</a>
+                        <a class="button" href="https://github.com/dandanmania/myFlix-Angular-client" target="_blank">GitHub Repo</a>
+                    </div>
+                </p>
+            </div>
             <div class="grid__item">
                 <div class="coming-container">
                     <img class="coming" alt="Coming Soon Image" src="./img/comingsoon.png">
