Fix Angular myFlix div and alter styling for it

--- a/work.html
+++ b/work.html
@@ -96,16 +96,18 @@
                     <a class="button" href="https://github.com/dandanmania/meet" target="_blank">GitHub Repo</a>
                 </div>
             </div>
-            <div>
+            <div class="grid__item">
                 <h2>myFlix - Angular</h2>
                 <p>
                     An app using a self-made API to display information of a handful of anime movies... except this time using Angular!
-                    <img src="./img/myFlixAngularSample.png" alt="Sample image of the Angular myFlix App">
-                    <div class="button-container">
-                        <a class="button" href="https://dandanmania.github.io/myFlix-Angular-client/" target="_blank">Find it Here!</a>
-                        <a class="button" href="https://github.com/dandanmania/myFlix-Angular-client" target="_blank">GitHub Repo</a>
-                    </div>
                 </p>
+                <div class="sample-container">
+                    <img src="./img/myFlixAngularSample.png" alt="Sample image of the Angular myFlix App">
+                </div>
+                <div class="button-container">
+                    <a class="button" href="https://dandanmania.github.io/myFlix-Angular-client/" target="_blank">Find it Here!</a>
+                    <a class="button" href="https://github.com/dandanmania/myFlix-Angular-client" target="_blank">GitHub Repo</a>
+                </div>
             </div>
             <div class="grid__item">
                 <div class="coming-container">
