Check out code on Main altered

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin&family=Noto+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mogra&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.production.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <!-- Navigation -->
@@ -53,8 +53,7 @@
                 <h2>I am a <span class="web">&lt;web&gt;</span> development student from California.</h2>
             </li>
             <li>
-                <a class="checkoutlink" href="https://github.com/dandanmania" target="_blank">Check out some of my code</a>
-                <img class="checkoutimg" src="./img/checkout.png" alt="">
+                <a href="https://github.com/dandanmania" target="_blank"><img class="checkoutimg" src="./img/checkout.png" alt=""></a>
             </li>
         </ul>
     </div>
