Revamp Contact Page and Update Skills with Angular

--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
                             <img class="react-logo tools-logo" src="./img/React-icon.svg" alt="React Logo">
                             <img class="sql-logo tools-logo" src="./img/sql-database-generic.svg" alt="Sql Logo">
                             <img class="mongoDB-logo tools-logo" src="./img/MongoDB_Logo.svg" alt="MongoDB Logo">
+                            <img class="angular-logo tools-logo" src="./img/angular.svg" alt="Angular Logo">
                         </div>
                     </div>
             </div>
